<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_overview">Buildings</string>
    <string name="title_building_details">Building Details</string>

    <!-- Building Groups -->
    <string name="building_group_research">Research Buildings</string>
    <string name="building_group_ship">Ship Buildings</string>
    <string name="building_group_officer">Officer Buildings</string>
    <string name="building_group_drydock">Drydocks</string>
    <string name="building_group_defense_platform">Defense Platforms</string>
    <string name="building_group_parsteel">Parsteel Buildings</string>
    <string name="building_group_tritanium">Tritanium Buildings</string>
    <string name="building_group_dilithium">Dilithium Buildings</string>

    <!-- Buildings Screen -->
    <string name="buildings_back_main">Back to main list</string>
    <string name="item_building_group_arrow">Filter on group</string>
    <string name="item_building_group_progress">Progress %d%%</string>

    <!-- Building Detailed Screen -->
    <string name="detailed_header_bonuses">Bonuses</string>
    <string name="detailed_header_build_time">Build Time</string>
    <string name="detailed_header_power">Power</string>
    <string name="detailed_header_build_costs">Build Costs</string>
    <string name="detailed_header_requirements">Requirements</string>
    <string name="detailed_header_rewards">Rewards</string>
    <string name="detailed_header_description">Description</string>

    <string name="dialog_confirmation_title">Downgrading %s</string>
    <string name="dialog_confirmation_message">Please confirm that you want to downgrade the building.</string>
    <string name="dialog_confirmation_message_operations">
        Please confirm that you want to downgrade the Operations building.

        This will downgrade all buildings and research that depend on the current Operations level.
    </string>
</resources>